--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0EXniwLpRldLJROlmqVAh",
+      "authorship_tag": "ABX9TyO1n0Zrv69H9iQGGRPf+3M1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,33 +40,34 @@
         "\n",
         "tri=[]\n",
         "\n",
-        "def find_divisors(x):\n",
-        "    if x<0: return print(\"divisors can be in more than zero.\")\n",
-        "    divs=[]\n",
-        "\n",
         "\n",
         "def minimalize(*args):\n",
         "    given= [ q if type(q) is int else None for q in args]\n",
-        "    div, div2 , div3 = [], [], {}\n",
-        "    for q in given:\n",
-        "        div.append([])\n",
-        "        for q1 in range(2,q):\n",
-        "            if q%q1==0 :div[-1].append(q1)\n",
+        "    div, allDivs, divall = [], {}, {}\n",
+        "    for giv in given:\n",
+        "        div.append({})\n",
+        "        tmp, q = giv+0, 2\n",
+        "        while q<=tmp:\n",
+        "            if tmp%q==0:\n",
+        "                tmp=int(tmp/q)\n",
+        "                if q in div[-1].keys():div[-1][q]+=1\n",
+        "                else:\n",
+        "                    div[-1][q]=1\n",
+        "            else:q+=1\n",
         "    for q in div:\n",
-        "        div2.append({})\n",
-        "        for q1 in q:\n",
-        "            if q1 not in div2[-1].keys(): div2[-1][q1]=1\n",
-        "            else: div2[q1]+=1\n",
+        "        for k in q.keys():\n",
+        "            if k not in allDivs.keys(): allDivs[k]=1\n",
+        "            else: allDivs[k]+=1\n",
+        "    for ad in allDivs.keys():\n",
+        "        if allDivs[ad]==len(given):divall[ad]=min([ d[ad] if ad in d.keys() else 0 for d in div])\n",
+        "    for number in divall:\n",
+        "        for giv in range(len(given)):given[giv] = int(given[giv] / number ** divall[number])\n",
+        "    return given\n",
         "\n",
-        "    for q1 in div2:\n",
-        "      for q in q1.keys():\n",
-        "        if q not in div3.keys(): div3[q]=1\n",
-        "        else: div3[q]=1\n",
-        "    divisors=[]\n",
-        "    for q in div3:\n",
-        "        if div3[q] == len(given): divisors.append(q)\n",
-        "    print(divisors)\n",
-        "minimalize(2,4,6)\n",
+        "\n",
+        "def find_divisors(x):\n",
+        "    if x<0: return print(\"divisors can be in more than zero.\")\n",
+        "    divs=[]\n",
         "\n",
         "\n",
         "def find_tri(x,y):\n",
@@ -83,15 +84,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a6a178ea-3c0d-4b2e-f2a5-fc3e508397b8"
+        "outputId": "d25a8f22-16ff-4006-a2d7-4ec3c0d659c8"
       },
-      "execution_count": 19,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[]\n"
+            "3 [2, 6, 22]\n",
+            "true\n",
+            "1 [2, 6, 22]\n",
+            "1 [2, 6, 22]\n",
+            "[1, 3, 11]\n"
           ]
         }
       ]
