--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaLY9Dlu5G++H9y20jRMZ+",
+      "authorship_tag": "ABX9TyN0wFGHPRSj3FaJapS0/C11",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,50 +29,166 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "# -*- coding: utf-8 -*-\n",
-        "#Created on Thursday, January 12 20:00:00 2024\n",
-        "#@author: mefamex\n",
+        "# Created on Thursday, January 12, 2024\n",
+        "# Author: mefamex\n",
         "\n",
+        "from time import sleep\n",
         "\n",
-        "max_X, max_Y = 10, 10\n",
+        "class spe_tri_finder:\n",
+        "    def __init__(self, user_X, user_Y, show=True):\n",
+        "        \"\"\"\n",
+        "        Initializes the SpecialTriangleFinder class.\n",
         "\n",
-        "X, Y = 1,1\n",
+        "        Parameters:\n",
+        "            user_X (int): The user-provided value for X.\n",
+        "            user_Y (int): The user-provided value for Y.\n",
+        "            show (bool, optional): Whether to show the triangles. Defaults to True.\n",
+        "        \"\"\"\n",
+        "        self.spec_tri, self.show = [], show\n",
+        "        self.main_function(user_X, user_Y, show=show)\n",
         "\n",
-        "spec_tri=[]\n",
+        "    def minimize(self, given: list):\n",
+        "        \"\"\"\n",
+        "        Calculates the greatest common divisor and minimizes the given numbers.\n",
         "\n",
-        "def minimalize(given:list):\n",
-        "  ebob = min(given)\n",
-        "  for sayi in given:\n",
-        "    while sayi:\n",
-        "      ebob, sayi = sayi, ebob % sayi\n",
-        "  return [sayi // ebob for sayi in given]\n",
+        "        Parameters:\n",
+        "            given (list): List of numbers to minimize.\n",
         "\n",
+        "        Returns:\n",
+        "            list: Minimized list of numbers.\n",
+        "        \"\"\"\n",
+        "        gcd = min(given)\n",
+        "        for number in given:\n",
+        "            while number:\n",
+        "                gcd, number = number, gcd % number\n",
+        "        return [number // gcd for number in given]\n",
         "\n",
-        "def find_tri(x,y):\n",
-        "  a = int( abs( x**2 - y**2 ) )\n",
-        "  b = int( 2*x*y )\n",
-        "  c = int( x**2 + y**2 )\n",
-        "  return a,b,c\n",
+        "    def add_tri(self, tri: list):\n",
+        "        \"\"\"\n",
+        "        Adds a triangle after sorting and checking for duplicates.\n",
         "\n",
-        "def add_tri(triangle: list):\n",
-        "   q = minimize( triangle )\n",
-        "   if q not in spec_tri:\n",
-        "     spec_tri.append(q)\n",
+        "        Parameters:\n",
+        "            tri (list): Triangle to be added.\n",
         "\n",
+        "        Returns:\n",
+        "            None: If triangle is invalid (contains zero).\n",
+        "        \"\"\"\n",
+        "        tri.sort()\n",
+        "        if tri[0] == 0 or tri[1] == 0: return None\n",
+        "        if tri not in self.spec_tri:\n",
+        "            self.spec_tri.append(tri)\n",
         "\n",
-        "for X in range(1,max_X):\n",
-        "  for Y in range(1,max_Y):\n",
-        "    tri = find_tri(X,Y)\n",
-        "    mini = minimalize( tri )\n",
-        "    add_tri( min )\n",
+        "    def find_tri(self, x, y):\n",
+        "        \"\"\"\n",
+        "        Finds the sides of a triangle with given x and y values.\n",
         "\n",
-        "print(spec_tri)"
+        "        Parameters:\n",
+        "            x (int): First parameter.\n",
+        "            y (int): Second parameter.\n",
+        "\n",
+        "        Returns:\n",
+        "            list: List representing the sides of the triangle.\n",
+        "        \"\"\"\n",
+        "        a = int(abs(x**2 - y**2))\n",
+        "        b = int(2 * x * y)\n",
+        "        c = int(x**2 + y**2)\n",
+        "        return [a, b, c]\n",
+        "\n",
+        "    def main_function(self, max_X, max_Y, show=None):\n",
+        "        \"\"\"\n",
+        "        Finds and prints special triangles based on user-provided X and Y values.\n",
+        "\n",
+        "        Parameters:\n",
+        "            max_X (int): The maximum value for X in the loop.\n",
+        "            max_Y (int): The maximum value for Y in the loop.\n",
+        "            show (bool, optional): Whether to show the triangles. Defaults to the value provided in __init__.\n",
+        "        \"\"\"\n",
+        "        if show is None:show = self.show\n",
+        "        self.spec_tri = []\n",
+        "        print(\"max values and side:\", max_X, max_Y, max(self.find_tri(max_X,max_Y)),\"\\nrunning...\\r\",end=\"\")\n",
+        "        for X in range(1, max_X):\n",
+        "            for Y in range(1, max_Y):\n",
+        "                tri = self.find_tri(X, Y)\n",
+        "                tri = self.minimize(tri)\n",
+        "                self.add_tri(tri)\n",
+        "            print(\"X:\", len(self.spec_tri),\"\\r\",end=\"\")\n",
+        "            sleep(0.1)\n",
+        "        self.spec_tri.sort()\n",
+        "\n",
+        "        print(f\"{len(self.spec_tri)} special triangles found\")\n",
+        "        if show:\n",
+        "            print(*self.spec_tri, sep=\"\\n\")\n",
+        "            print(\"Done!\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "\n",
+        "    # Example usage:\n",
+        "    user_X = 10\n",
+        "    user_Y = 10\n",
+        "\n",
+        "    finder = spe_tri_finder(user_X, user_Y)\n",
+        "\n",
+        "    # Or\n",
+        "    finder.main_function(5, 5)\n",
+        "\n",
+        "    # Or\n",
+        "    spe_tri_finder(3, 3)\n",
+        "\n",
+        "    # Last one\n",
+        "    tri = spe_tri_finder(1000, 1000, False)\n",
+        "    print(tri.spec_tri[-1])"
       ],
       "metadata": {
-        "id": "-PYZdybn_8nT"
+        "id": "-PYZdybn_8nT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "33984289-1e74-4dac-824d-523314f05931"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "max values and side: 10 10 200 \n",
+            "18 special triangles found\n",
+            "[3, 4, 5]\n",
+            "[5, 12, 13]\n",
+            "[7, 24, 25]\n",
+            "[8, 15, 17]\n",
+            "[9, 40, 41]\n",
+            "[11, 60, 61]\n",
+            "[12, 35, 37]\n",
+            "[13, 84, 85]\n",
+            "[15, 112, 113]\n",
+            "[16, 63, 65]\n",
+            "[17, 144, 145]\n",
+            "[20, 21, 29]\n",
+            "[28, 45, 53]\n",
+            "[33, 56, 65]\n",
+            "[36, 77, 85]\n",
+            "[39, 80, 89]\n",
+            "[48, 55, 73]\n",
+            "[65, 72, 97]\n",
+            "Done!\n",
+            "max values and side: 5 5 50 \n",
+            "4 special triangles found\n",
+            "[3, 4, 5]\n",
+            "[5, 12, 13]\n",
+            "[7, 24, 25]\n",
+            "[8, 15, 17]\n",
+            "Done!\n",
+            "max values and side: 3 3 18 \n",
+            "1 special triangles found\n",
+            "[3, 4, 5]\n",
+            "Done!\n",
+            "max values and side: 1000 1000 2000000 \n"
+          ]
+        }
+      ]
     }
   ]
 }
