--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0wFGHPRSj3FaJapS0/C11",
+      "authorship_tag": "ABX9TyMP5naOq2m66BXeiJlT8/7E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,10 +36,10 @@
         "\n",
         "from time import sleep\n",
         "\n",
-        "class spe_tri_finder:\n",
+        "class SpeTriFinder:\n",
         "    def __init__(self, user_X, user_Y, show=True):\n",
         "        \"\"\"\n",
-        "        Initializes the SpecialTriangleFinder class.\n",
+        "        Initializes the SpeTriFinder class.\n",
         "\n",
         "        Parameters:\n",
         "            user_X (int): The user-provided value for X.\n",
@@ -47,7 +47,7 @@
         "            show (bool, optional): Whether to show the triangles. Defaults to True.\n",
         "        \"\"\"\n",
         "        self.spec_tri, self.show = [], show\n",
-        "        self.main_function(user_X, user_Y, show=show)\n",
+        "        self.run_finder(user_X, user_Y, show=show)\n",
         "\n",
         "    def minimize(self, given: list):\n",
         "        \"\"\"\n",
@@ -96,65 +96,184 @@
         "        c = int(x**2 + y**2)\n",
         "        return [a, b, c]\n",
         "\n",
-        "    def main_function(self, max_X, max_Y, show=None):\n",
+        "    def run_finder(self, max_X, max_Y, show=None):\n",
         "        \"\"\"\n",
-        "        Finds and prints special triangles based on user-provided X and Y values.\n",
+        "        Finds and optionally shows special triangles based on user-provided X and Y values.\n",
         "\n",
         "        Parameters:\n",
         "            max_X (int): The maximum value for X in the loop.\n",
         "            max_Y (int): The maximum value for Y in the loop.\n",
         "            show (bool, optional): Whether to show the triangles. Defaults to the value provided in __init__.\n",
         "        \"\"\"\n",
-        "        if show is None:show = self.show\n",
+        "        if show is None:\n",
+        "            show = self.show\n",
+        "\n",
         "        self.spec_tri = []\n",
-        "        print(\"max values and side:\", max_X, max_Y, max(self.find_tri(max_X,max_Y)),\"\\nrunning...\\r\",end=\"\")\n",
+        "        print(f\"max values and side: {max_X}, {max_Y}, {max(self.find_tri(max_X, max_Y))}\\nRunning...  \", end=\"\")\n",
         "        for X in range(1, max_X):\n",
         "            for Y in range(1, max_Y):\n",
         "                tri = self.find_tri(X, Y)\n",
         "                tri = self.minimize(tri)\n",
         "                self.add_tri(tri)\n",
-        "            print(\"X:\", len(self.spec_tri),\"\\r\",end=\"\")\n",
-        "            sleep(0.1)\n",
+        "            print(f\"\\rX: {X}  \", end=\"\")\n",
         "        self.spec_tri.sort()\n",
         "\n",
-        "        print(f\"{len(self.spec_tri)} special triangles found\")\n",
+        "        print(f\"\\r{len(self.spec_tri)} special triangles found\")\n",
         "        if show:\n",
         "            print(*self.spec_tri, sep=\"\\n\")\n",
-        "            print(\"Done!\")\n",
+        "            print(\"Done!  \",\"-\"*15)\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "\n",
         "    # Example usage:\n",
         "    user_X = 10\n",
         "    user_Y = 10\n",
         "\n",
-        "    finder = spe_tri_finder(user_X, user_Y)\n",
+        "    finder = SpeTriFinder(user_X, user_Y)\n",
         "\n",
         "    # Or\n",
-        "    finder.main_function(5, 5)\n",
+        "    finder.run_finder(5, 5, show=False)\n",
         "\n",
         "    # Or\n",
-        "    spe_tri_finder(3, 3)\n",
+        "    SpeTriFinder(3, 3)\n",
         "\n",
         "    # Last one\n",
-        "    tri = spe_tri_finder(1000, 1000, False)\n",
-        "    print(tri.spec_tri[-1])"
+        "    big = SpeTriFinder(100, 100, False)\n",
+        "    print(big.spec_tri[-1])"
       ],
       "metadata": {
         "id": "-PYZdybn_8nT",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "33984289-1e74-4dac-824d-523314f05931"
+        "outputId": "5e99df49-0ff0-43db-884c-671535e63822"
       },
-      "execution_count": null,
+      "execution_count": 187,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "max values and side: 10 10 200 \n",
-            "18 special triangles found\n",
+            "max values and side: 10, 10, 200\n",
+            "Running...  \rX: 1  \rX: 2  \rX: 3  \rX: 4  \rX: 5  \rX: 6  \rX: 7  \rX: 8  \rX: 9  \r18 special triangles found\n",
+            "[3, 4, 5]\n",
+            "[5, 12, 13]\n",
+            "[7, 24, 25]\n",
+            "[8, 15, 17]\n",
+            "[9, 40, 41]\n",
+            "[11, 60, 61]\n",
+            "[12, 35, 37]\n",
+            "[13, 84, 85]\n",
+            "[15, 112, 113]\n",
+            "[16, 63, 65]\n",
+            "[17, 144, 145]\n",
+            "[20, 21, 29]\n",
+            "[28, 45, 53]\n",
+            "[33, 56, 65]\n",
+            "[36, 77, 85]\n",
+            "[39, 80, 89]\n",
+            "[48, 55, 73]\n",
+            "[65, 72, 97]\n",
+            "Done!   ---------------\n",
+            "max values and side: 5, 5, 50\n",
+            "Running...  \rX: 1  \rX: 2  \rX: 3  \rX: 4  \r4 special triangles found\n",
+            "max values and side: 3, 3, 18\n",
+            "Running...  \rX: 1  \rX: 2  \r1 special triangles found\n",
+            "[3, 4, 5]\n",
+            "Done!   ---------------\n",
+            "max values and side: 100, 100, 20000\n",
+            "Running...  \rX: 1  \rX: 2  \rX: 3  \rX: 4  \rX: 5  \rX: 6  \rX: 7  \rX: 8  \rX: 9  \rX: 10  \rX: 11  \rX: 12  \rX: 13  \rX: 14  \rX: 15  \rX: 16  \rX: 17  \rX: 18  \rX: 19  \rX: 20  \rX: 21  \rX: 22  \rX: 23  \rX: 24  \rX: 25  \rX: 26  \rX: 27  \rX: 28  \rX: 29  \rX: 30  \rX: 31  \rX: 32  \rX: 33  \rX: 34  \rX: 35  \rX: 36  \rX: 37  \rX: 38  \rX: 39  \rX: 40  \rX: 41  \rX: 42  \rX: 43  \rX: 44  \rX: 45  \rX: 46  \rX: 47  \rX: 48  \rX: 49  \rX: 50  \rX: 51  \rX: 52  \rX: 53  \rX: 54  \rX: 55  \rX: 56  \rX: 57  \rX: 58  \rX: 59  \rX: 60  \rX: 61  \rX: 62  \rX: 63  \rX: 64  \rX: 65  \rX: 66  \rX: 67  \rX: 68  \rX: 69  \rX: 70  \rX: 71  \rX: 72  \rX: 73  \rX: 74  \rX: 75  \rX: 76  \rX: 77  \rX: 78  \rX: 79  \rX: 80  \rX: 81  \rX: 82  \rX: 83  \rX: 84  \rX: 85  \rX: 86  \rX: 87  \rX: 88  \rX: 89  \rX: 90  \rX: 91  \rX: 92  \rX: 93  \rX: 94  \rX: 95  \rX: 96  \rX: 97  \rX: 98  \rX: 99  \r2000 special triangles found\n",
+            "[7923, 8036, 11285]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Eğer hiç bir şey anlamadıysan aşağıya en sade halini bırakıyorum."
+      ],
+      "metadata": {
+        "id": "mogFtvnh_9Ph"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# -*- coding: utf-8 -*-\n",
+        "# Created on Thursday, January 12, 2024\n",
+        "# Author: mefamex\n",
+        "\n",
+        "def minimize(given):\n",
+        "    gcd = min(given)\n",
+        "    for number in given:\n",
+        "        while number:\n",
+        "            gcd, number = number, gcd % number\n",
+        "    return [number // gcd for number in given]\n",
+        "\n",
+        "def add_tri(triangles, tri):\n",
+        "    tri.sort()\n",
+        "    if tri[0] == 0 or tri[1] == 0:\n",
+        "        return None\n",
+        "    if tri not in triangles:\n",
+        "        triangles.append(tri)\n",
+        "\n",
+        "def find_tri(x, y):\n",
+        "    a = int(abs(x**2 - y**2))\n",
+        "    b = int(2 * x * y)\n",
+        "    c = int(x**2 + y**2)\n",
+        "    return [a, b, c]\n",
+        "\n",
+        "def run_finder(max_X, max_Y, show=True):\n",
+        "    triangles = []\n",
+        "    print(f\"max values and side: {max_X}, {max_Y}, {max(find_tri(max_X, max_Y))}\\nRunning...  \", end=\"\")\n",
+        "    for X in range(1, max_X):\n",
+        "        for Y in range(1, max_Y):\n",
+        "            tri = find_tri(X, Y)\n",
+        "            tri = minimize(tri)\n",
+        "            add_tri(triangles, tri)\n",
+        "        print(f\"\\rX: {len(triangles)}  \", end=\"\")\n",
+        "    triangles.sort()\n",
+        "\n",
+        "    print(f\"\\r{len(triangles)} special triangles found\")\n",
+        "    if show:\n",
+        "        print(*triangles, sep=\"\\n\")\n",
+        "        print(\"Done!\")\n",
+        "    return triangles\n",
+        "\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    user_X = 10\n",
+        "    user_Y = 10\n",
+        "\n",
+        "    run_finder(user_X, user_Y)\n",
+        "\n",
+        "    # Or\n",
+        "    run_finder(5, 5, show=False)\n",
+        "\n",
+        "    # Or\n",
+        "    run_finder(3, 3)\n",
+        "\n",
+        "    # Last one\n",
+        "    big = run_finder(100, 100, show=False)\n",
+        "    print(\"last big one:\", big[-1])"
+      ],
+      "metadata": {
+        "id": "c_JUJ347ADiV",
+        "outputId": "df96b1cf-d036-46aa-8c06-dba2ba067c73",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 188,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "max values and side: 10, 10, 200\n",
+            "Running...  \rX: 7  \rX: 10  \rX: 11  \rX: 13  \rX: 15  \rX: 16  \rX: 17  \rX: 18  \rX: 18  \r18 special triangles found\n",
             "[3, 4, 5]\n",
             "[5, 12, 13]\n",
             "[7, 24, 25]\n",
@@ -174,18 +293,15 @@
             "[48, 55, 73]\n",
             "[65, 72, 97]\n",
             "Done!\n",
-            "max values and side: 5 5 50 \n",
-            "4 special triangles found\n",
-            "[3, 4, 5]\n",
-            "[5, 12, 13]\n",
-            "[7, 24, 25]\n",
-            "[8, 15, 17]\n",
-            "Done!\n",
-            "max values and side: 3 3 18 \n",
-            "1 special triangles found\n",
+            "max values and side: 5, 5, 50\n",
+            "Running...  \rX: 2  \rX: 3  \rX: 4  \rX: 4  \r4 special triangles found\n",
+            "max values and side: 3, 3, 18\n",
+            "Running...  \rX: 1  \rX: 1  \r1 special triangles found\n",
             "[3, 4, 5]\n",
             "Done!\n",
-            "max values and side: 1000 1000 2000000 \n"
+            "max values and side: 100, 100, 20000\n",
+            "Running...  \rX: 97  \rX: 145  \rX: 206  \rX: 252  \rX: 322  \rX: 351  \rX: 421  \rX: 463  \rX: 514  \rX: 546  \rX: 611  \rX: 636  \rX: 698  \rX: 729  \rX: 762  \rX: 796  \rX: 850  \rX: 871  \rX: 920  \rX: 944  \rX: 970  \rX: 995  \rX: 1035  \rX: 1052  \rX: 1082  \rX: 1104  \rX: 1125  \rX: 1144  \rX: 1170  \rX: 1180  \rX: 1201  \rX: 1219  \rX: 1229  \rX: 1245  \rX: 1257  \rX: 1269  \rX: 1286  \rX: 1304  \rX: 1317  \rX: 1333  \rX: 1352  \rX: 1364  \rX: 1384  \rX: 1404  \rX: 1417  \rX: 1439  \rX: 1461  \rX: 1477  \rX: 1497  \rX: 1517  \rX: 1532  \rX: 1554  \rX: 1577  \rX: 1592  \rX: 1608  \rX: 1627  \rX: 1640  \rX: 1660  \rX: 1680  \rX: 1690  \rX: 1709  \rX: 1727  \rX: 1737  \rX: 1755  \rX: 1768  \rX: 1778  \rX: 1794  \rX: 1809  \rX: 1818  \rX: 1828  \rX: 1842  \rX: 1851  \rX: 1864  \rX: 1877  \rX: 1884  \rX: 1895  \rX: 1903  \rX: 1909  \rX: 1919  \rX: 1927  \rX: 1933  \rX: 1942  \rX: 1950  \rX: 1954  \rX: 1960  \rX: 1967  \rX: 1971  \rX: 1976  \rX: 1981  \rX: 1983  \rX: 1986  \rX: 1990  \rX: 1992  \rX: 1995  \rX: 1997  \rX: 1998  \rX: 1999  \rX: 2000  \rX: 2000  \r2000 special triangles found\n",
+            "last big one: [7923, 8036, 11285]\n"
           ]
         }
       ]
