--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMP5naOq2m66BXeiJlT8/7E",
+      "authorship_tag": "ABX9TyNs0eecR6vec++EtbZiYD+X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -190,7 +190,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Eğer hiç bir şey anlamadıysan aşağıya en sade halini bırakıyorum."
+        "\n",
+        "\n",
+        "\n",
+        "Eğer hiç bir şey anlamadıysan aşağıya en sade halini bırakıyorum.\n",
+        "\n",
+        "If you didn't understand anything, I'm leaving the simplest version below."
       ],
       "metadata": {
         "id": "mogFtvnh_9Ph"
@@ -260,11 +265,11 @@
         "    print(\"last big one:\", big[-1])"
       ],
       "metadata": {
-        "id": "c_JUJ347ADiV",
-        "outputId": "df96b1cf-d036-46aa-8c06-dba2ba067c73",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "c_JUJ347ADiV",
+        "outputId": "df96b1cf-d036-46aa-8c06-dba2ba067c73"
       },
       "execution_count": 188,
       "outputs": [
